Create the title components

--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <title>Lucas Gomes</title>
 
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Press+Start+2P&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="Css/reset.css">
     <link rel="stylesheet" href="Css/index.css">
+    <link rel="stylesheet" href="Css/Components/title.css">
     
 </head>
 <body>
+    <!-- header cabeçalho, h1 etapa e nav os botões-->
     <header>
         <img src="assets/img/logo.png" alt="Avatar do Lucas Gomes">
         <nav>
@@ -22,5 +25,8 @@
             <a id="button" href="" lang="en">Download cv</a>
         </nav>
     </header>
+    <!-- heading 1-->
+    <h1>Lucas Gomes</h1>
+    </body>
 </body>
 </html> 
