create a subtitle component

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="Css/reset.css">
     <link rel="stylesheet" href="Css/index.css">
     <link rel="stylesheet" href="Css/Components/title.css">
-    
+    <link rel="stylesheet" href="Css/Components/subtitle.css">
 </head>
 <body>
     <!-- header cabeçalho, h1 etapa e nav os botões-->
@@ -27,6 +27,7 @@
     </header>
     <!-- heading 1-->
     <h1>Lucas Gomes</h1>
+    <h2>FullStack Developer</h2>
     </body>
 </body>
 </html> 
