create the box component

--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <title>Lucas Gomes</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Press+Start+2P&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="Css/reset.css">
     <link rel="stylesheet" href="Css/index.css">
     <link rel="stylesheet" href="Css/Components/title.css">
     <link rel="stylesheet" href="Css/Components/subtitle.css">
+    <link rel="stylesheet" href="Css/Components/box.css">
 </head>
+
 <body>
     <!-- header cabeçalho, h1 etapa e nav os botões-->
     <header>
@@ -26,8 +30,12 @@
         </nav>
     </header>
     <!-- heading 1-->
-    <h1>Lucas Gomes</h1>
-    <h2>FullStack Developer</h2>
-    </body>
+
+    <div id="box">
+        <h1>Lucas Gomes</h1>
+        <h2>FullStack Developer</h2>
+    </div>
 </body>
-</html> 
+</body>
+
+</html>
