Create the buttons components

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="Css/Components/title.css">
     <link rel="stylesheet" href="Css/Components/subtitle.css">
     <link rel="stylesheet" href="Css/Components/box.css">
+    <link rel="stylesheet" href="Css/Components/button.css">
 </head>
 
 <body>
@@ -26,7 +27,7 @@
             <a href="" lang="en"> Projects</a>
             <a href="">Sobre</a>
             <a href="">Contatos</a>
-            <a id="button" href="" lang="en">Download cv</a>
+            <a class="button" href="" lang="en">Download cv</a>
         </nav>
     </header>
     <!-- heading 1-->
@@ -35,7 +36,9 @@
         <h1>Lucas Gomes</h1>
         <h2>FullStack Developer</h2>
     </div>
-</body>
+    <a class="button" href="" lang="en">Download cv</a>
+    <a class="button" href="">Contatos</a>
+
 </body>
 
 </html>
