Create the button component

--- a/index.html
+++ b/index.html
@@ -11,30 +11,31 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="Css/reset.css">
-    <link rel="stylesheet" href="Css/index.css">
     <link rel="stylesheet" href="Css/Components/title.css">
     <link rel="stylesheet" href="Css/Components/subtitle.css">
     <link rel="stylesheet" href="Css/Components/box.css">
     <link rel="stylesheet" href="Css/Components/button.css">
+    <link rel="stylesheet" href="Css/Components/action.css">
+    <link rel="stylesheet" href="Css/Components/header.css">
 </head>
 
 <body>
     <!-- header cabeçalho, h1 etapa e nav os botões-->
-    <header>
+    <header class="header">
         <img src="assets/img/logo.png" alt="Avatar do Lucas Gomes">
         <nav>
-            <a href="" lang="en"> Skills</a>
-            <a href="" lang="en"> Projects</a>
-            <a href="">Sobre</a>
-            <a href="">Contatos</a>
+            <a class="action" href="" lang="en"> Skills</a>
+            <a class="action" href="" lang="en"> Projects</a>
+            <a class="action" href="">Sobre</a>
+            <a class="action" href="">Contatos</a>
             <a class="button" href="" lang="en">Download cv</a>
         </nav>
     </header>
     <!-- heading 1-->
 
-    <div id="box">
-        <h1>Lucas Gomes</h1>
-        <h2>FullStack Developer</h2>
+    <div class="box">
+        <h1 class="title">Lucas Gomes</h1>
+        <h2 class="subtitle">FullStack Developer</h2>
     </div>
     <a class="button" href="" lang="en">Download cv</a>
     <a class="button" href="">Contatos</a>
