create background components

--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
     <link rel="stylesheet" href="Css/reset.css">
     <link rel="stylesheet" href="Css/Components/title.css">
     <link rel="stylesheet" href="Css/Components/subtitle.css">
+    <link rel="stylesheet" href="Css/Components/banner.css">
     <link rel="stylesheet" href="Css/Components/box.css">
     <link rel="stylesheet" href="Css/Components/button.css">
     <link rel="stylesheet" href="Css/Components/action.css">
     <link rel="stylesheet" href="Css/Components/header.css">
+
 </head>
+
 <body>
     <!-- header cabeçalho, h1 etapa e nav os botões-->
     <header class="header">
@@ -31,14 +34,20 @@
         </nav>
     </header>
     <!-- heading 1-->
+    <section class="banner">
+        <div class="wrapper">
+            <div class="box">
 
-    <div class="box">
-        <h1 class="title">Lucas Gomes</h1>
-        <h2 class="subtitle">FullStack Developer</h2>
-    </div>
-    <a class="button" href="" lang="en">Download cv</a>
-    <a class="button" href="">Contatos</a>
+                <h1 class="title">Lucas Gomes</h1>
+                <h2 class="subtitle">FullStack Developer</h2>
+            </div>
 
+            <div class="navigation">
+                <a class="button" href="" lang="en">Download cv</a>
+                <a class="button" href="">Contatos</a>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
