create -second variation of title

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="Css/Components/button.css">
     <link rel="stylesheet" href="Css/Components/action.css">
     <link rel="stylesheet" href="Css/Components/header.css">
+    
+
 
 </head>
 
@@ -48,6 +50,6 @@
             </div>
         </div>
     </section>
+    <h2 class="title -second">Skills</h2>
 </body>
-
 </html>
