--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="Css/Components/button.css">
     <link rel="stylesheet" href="Css/Components/action.css">
     <link rel="stylesheet" href="Css/Components/header.css">
+    <link rel="stylesheet" href="Css/Components/section.css">
     
 
 
@@ -48,8 +49,11 @@
                 <a class="button" href="" lang="en">Download cv</a>
                 <a class="button" href="">Contatos</a>
             </div>
+            <!-- a div não tem limitador mas a section tem-->
         </div>
     </section>
+    <section class="section">
     <h2 class="title -second">Skills</h2>
+</section>
 </body>
 </html>
