looking for a repair of the color bug

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="Css/reset.css">
-    <link rel="stylesheet" href="Css/Components/title.css">
+    <link rel="stylesheet" href="Css/Components/main-title.css">
     <link rel="stylesheet" href="Css/Components/subtitle.css">
     <link rel="stylesheet" href="Css/Components/banner.css">
     <link rel="stylesheet" href="Css/Components/box.css">
@@ -19,7 +19,9 @@
     <link rel="stylesheet" href="Css/Components/action.css">
     <link rel="stylesheet" href="Css/Components/header.css">
     <link rel="stylesheet" href="Css/Components/section.css">
-    
+    <link rel="stylesheet" href="Css/Components/skill-tec.css">
+    <link rel="stylesheet" href="Css/Components/progress-bar.css">
+
 
 
 </head>
@@ -27,7 +29,7 @@
 <body>
     <!-- header cabeçalho, h1 etapa e nav os botões-->
     <header class="header">
-        <img src="assets/img/logo.png" alt="Avatar do Lucas Gomes">
+        <img src="assets/logo.png" alt="Avatar do Lucas Gomes">
         <nav>
             <a class="action" href="" lang="en"> Skills</a>
             <a class="action" href="" lang="en"> Projects</a>
@@ -41,7 +43,7 @@
         <div class="wrapper">
             <div class="box">
 
-                <h1 class="title">Lucas Gomes</h1>
+                <h1 class="main-title">Lucas Gomes</h1>
                 <h2 class="subtitle">FullStack Developer</h2>
             </div>
 
@@ -53,7 +55,27 @@
         </div>
     </section>
     <section class="section">
-    <h2 class="title -second">Skills</h2>
-</section>
+        <h2 class="main-title -second">
+            Skills
+        </h2>
+        <!--dl descreve algo um avatar,plano de assinatura,skills-->
+        <dl class="skill-tec">
+            <!--dt description title e dd é define description  -->
+
+            <dd class="icon">
+                <img src="img/ico_html5.png" all="Logo do html em pixel art">
+            </dd>
+            <dt class="title">
+                HTML
+            </dt>
+            <dd>
+                <progress class="progress-bar" max="100" value="70">
+                  
+                </progress>
+            </dd>
+
+        </dl>
+    </section>
 </body>
+
 </html>
