--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
       <p class="textsobre">Bem vindo! Eu me chamo Lucas Gomes e sou um desenvolvedor,
         formado em ciências da computação pela Universidade Estadual de Roraima - UERR
         e meu objetivo é aperfeiçoar os meus conhecimentos, criar novos projetos e trabalhar
-        nesse grande mundo da tecnologia. Meu hobby é ser um Dungeon Master e gosto de criar
+        nesse grande mundo da tecnologia. Meu hobby é jogar RPG como DM e gosto de criar
         historias, mundos, criaturas e aplicações para automatizar as minhas criações. </p>
       <p class="textsobre">Welcome! My name is Lucas Gomes and I'm a developer, graduated 
         in computer science from the State University of Roraima - UERR and my goal is to
         improve my knowledge, create new projects and work in this great world of technology.
-        My hobby is being a Dungeon Master and I like creating stories, worlds, creatures and applications to automate my creations. </p>
+        My hobby is play RPG by GM and I like creating stories, worlds, creatures and applications to automate my creations. </p>
     </section>
     <section class="section-contatos" id="contacts">
       <h2 class="main-title -second" lang="en">Contacts</h2>
