--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </dd>
         </div>
         <div class="skill-item">
-          <dt class="title">C#sharp</dt>
+          <dt class="title">C#</dt>
           <dd class="icon">
             <img src="img/c-sharplogo.png" height="120" alt="Logo do C#" />
           </dd>
