pdf change to dowload

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a class="action" href="#projects" lang="en">Projects</a>
         <a class="action" href="#about">Sobre</a>
         <a class="action" href="#contacts">Contatos</a>
-        <a class="button" href="assets/cv.pdf" lang="en">Download CV</a>
+        <a class="button" href="assets/CV.pdf" lang="en" download="CV.pdf" >Download CV</a>
       </nav>
     </header>
     <!-- heading 1-->
@@ -35,7 +35,7 @@
         </div>
         <!--imagem do banner by freepik -->
         <div class="navigation">
-          <a class="button" href="assets/cv.pdf" lang="en">Download CV</a>
+          <a class="button" href="assets/cv.pdf" download="CV.pdf" lang="en">Download CV</a>
           <a class="button" href="#contacts" lang="en">Contacts</a>
         </div>
       </div>
