emojis button e dowload cv

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <input type="email"placeholder="lucasgomes@gmail.com" id="email" name="email" required />
     
         <label for="message">Message</label>
-        <textarea id="message" name="message" placeholder="oi tudo bom?" rows="5" required></textarea>
+        <textarea id="message" name="message" placeholder="oi tudo bom? o formulario é meramente ilustrativo 😅" rows="5" required></textarea>
     
         <button type="submit">Send</button>
       </form>
