--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <!--imagem do banner by freepik -->
         <div class="navigation">
-          <a class="button" href="assets/cv.pdf" download="CV.pdf" lang="en">Download CV</a>
+          <a class="button" href="assets/CV.pdf" download="CV.pdf" lang="en">Download CV</a>
           <a class="button" href="#contacts" lang="en">Contacts</a>
         </div>
       </div>
