--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <nav>
         <a class="action" href="#skills" lang="en">Skills</a>
         <a class="action" href="#projects" lang="en">Projects</a>
-        <a class="action" href="#about">Sobre</a>
-        <a class="action" href="#contacts">Contatos</a>
+        <a class="action" href="#about">About</a>
+        <a class="action" href="#contacts">Contacts</a>
         <a class="button" href="assets/CV.pdf" lang="en" download="CV.pdf" >Download CV</a>
       </nav>
     </header>
@@ -41,7 +41,7 @@
       </div>
     </section>
     <section class="section" id="skills">
-      <h2 class="main-title -second">Skills</h2>
+      <h2 class="main-title -second">SKILLS</h2>
       <div class="skill-tec">
         <div class="skill-item">
           <dt class="title">HTML</dt>
@@ -100,7 +100,7 @@
       </div>
     </section>
     <section class="section-pro" id="projects">
-      <h2 class="main-title -second">Projects</h2>
+      <h2 class="main-title -second">PROJECTS</h2>
       <div class="gitbutton-container">
         <a class="gitbutton" href="https://github.com/Glomes?tab=repositories" lang="en">
           <img src="img/githublogo.png" alt="GitHub logo" />
@@ -113,7 +113,7 @@
       </div>
     </section>
     <section class="section" id="about">
-      <h2 class="main-title -second" lang="en">Info</h2>
+      <h2 class="main-title -second" lang="en">ABOUT</h2>
       <p class="textsobre">Bem vindo! Eu me chamo Lucas Gomes e sou um desenvolvedor,
         formado em ciências da computação pela Universidade Estadual de Roraima - UERR
         e meu objetivo é aperfeiçoar os meus conhecimentos, criar novos projetos e trabalhar
@@ -125,7 +125,7 @@
         My hobby is play RPG by GM and I like creating stories, worlds, creatures and applications to automate my creations. </p>
     </section>
     <section class="section-contatos" id="contacts">
-      <h2 class="main-title -second" lang="en">Contacts</h2>
+      <h2 class="main-title -second" lang="en">CONTACT</h2>
       <form class="contact-form">
         <label for="name">Name</label>
         <input type="text" placeholder="Lucas Gomes" id="name" name="name" required />
